# libmatemixer

./: .build.yml  .travis.yml  AUTHORS  CNAME  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  libmatemixer.pot  makepot
.tx/: config  config_20221028215425.bak
2020-04-18-231455-3437-cppcheck@3b74151104cf_master/: 2.html
2020-06-17-114851-5654-cppcheck@af1db801e4aa_master/: 1.html
2020-06-22-140855-4536-cppcheck@5681751a2e5c_travis-ci/: index.html  stats.html
2020-06-24-150000-9193-cppcheck@f10cf3fd52af_master/: 3.html
2020-06-29-170022-7096-cppcheck@0981c0026dd1_master/: 4.html
2020-07-05-001249-3424-cppcheck@91a8f5709a80_master/: 0.html
2020-08-16-025438-8739-cppcheck@223642430be3_master/: 0.html  1.html  2.html  5.html  index.html
2020-08-18-163106-6415-cppcheck@3d6e4ebb0d94_master/: 4.html  stats.html
2020-08-18-163550-9038-cppcheck@3d6e4ebb0d94_v1.25.0/: 3.html
2020-12-08-213034-7486-cppcheck@31da9e1847a5_master/: 0.html  1.html  2.html  3.html  4.html  5.html  index.html  stats.html
2021-01-27-120145-9883-cppcheck@76eaf569862a_GETTEXT_PACKAGE/: 2.html  3.html
2021-02-22-195554-7950-cppcheck@59401d24a28c_master/: stats.html
2021-02-22-222230-7791-cppcheck@0487d4d6883f_master/: 1.html  4.html
2021-03-08-155410-2559-cppcheck@f3d3338d2a48_master/: 0.html
2021-04-23-114820-7981-cppcheck@704e53bf1ea1_master/: 5.html
2021-05-29-202711-9466-cppcheck@ac897846d014_master/: 0.html  1.html  2.html  3.html  4.html  5.html  index.html
2021-08-03-182536-4360-cppcheck@4454ee174542_v1.26.0/: 0.html  1.html  2.html  3.html  4.html  5.html  index.html  stats.html
2021-12-11-151804-3372-cppcheck@0e789da6c8a1_master/: 2.html  3.html  4.html  index.html  stats.html
2022-02-13-171508-6148-cppcheck@fc47f17a919e_master/: 0.html  1.html  5.html  6.html
2022-08-04-094651-7935-cppcheck@cb9e62b6d101_master/: 1.html
2022-08-04-095341-2124-cppcheck@70a1774abe25_no-undefined/: 3.html  9.html
2022-10-28-213155-5593-cppcheck@6395d5a632ce_master/: 0.html  2.html  index.html
2022-10-29-134903-0340-cppcheck@63529ee51d06_master/: 5.html
2022-11-11-174806-5932-cppcheck@a95b99fc23ad_master/: 7.html  stats.html
2022-11-11-200549-6218-cppcheck@4786f8d75499_master/: 10.html  4.html  6.html  8.html
2023-09-01-082906-4637-cppcheck@83021fd2d626_master/: 0.html  1.html  10.html  11.html  14.html  15.html  18.html  19.html  2.html  20.html  22.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  33.html  34.html  5.html  7.html  8.html  9.html  index.html  stats.html
2023-09-18-101207-2953-cppcheck@e9995a70b1ff_master/: 12.html  13.html  16.html  17.html  21.html  23.html  25.html  28.html  29.html  31.html  32.html  4.html  6.html  index.html
2024-01-23-144014-7576-cppcheck@0dfdbf83680f_master/: 100.html  102.html  104.html  105.html  106.html  107.html  108.html  109.html  11.html  110.html  111.html  113.html  14.html  15.html  16.html  17.html  2.html  20.html  21.html  24.html  25.html  28.html  29.html  3.html  30.html  31.html  34.html  35.html  44.html  45.html  47.html  49.html  50.html  52.html  55.html  56.html  59.html  62.html  64.html  65.html  (+24 more)
2024-02-12-233149-2073-cppcheck@dfb3970eaab0_v1.28.0/: 0.html  1.html  10.html  101.html  103.html  112.html  12.html  13.html  18.html  (+43 more)
backends/alsa/: Makefile.am  alsa-backend.c  alsa-backend.h  alsa-compat.h  alsa-constants.c  alsa-constants.h  alsa-device.c  alsa-device.h  alsa-element.c  alsa-element.h  alsa-stream-control.c  alsa-stream-control.h  alsa-stream-input-control.c  alsa-stream-input-control.h  alsa-stream-output-control.c  alsa-stream-output-control.h  alsa-stream.c  alsa-stream.h  alsa-switch-option.c  alsa-switch-option.h  alsa-switch.c  alsa-switch.h  alsa-toggle.c  alsa-toggle.h  alsa-types.h
backends/null/: Makefile.am  null-backend.c  null-backend.h  null.c  null.h
backends/oss/: Makefile.am  oss-backend.c  oss-backend.h  oss-common.h  oss-device.c  oss-device.h  oss-stream-control.c  oss-stream-control.h  oss-stream.c  oss-stream.h  oss-switch-option.c  oss-switch-option.h  oss-switch.c  oss-switch.h  oss-types.h
backends/oss4/: Makefile.am  oss4-backend.c  oss4-backend.h  oss4-common.h  oss4-device.c  oss4-device.h
backends/pulse/: Makefile.am  pulse-backend.c  pulse-backend.h  pulse-client-stream.c  pulse-client-stream.h  pulse-connection.c  pulse-connection.h  pulse-device-profile.c  pulse-device-profile.h  pulse-device-switch.c  pulse-device-switch.h  pulse-device.c  pulse-device.h  pulse-enum-types.c  pulse-enum-types.h  pulse-enums.h  pulse-ext-stream.c  pulse-ext-stream.h  pulse-helpers.c  pulse-helpers.h  pulse-monitor.c  pulse-monitor.h  pulse-port-switch.c  pulse-port-switch.h  pulse-port.c  pulse-port.h  pulse-sink-control.c  pulse-sink-control.h  pulse-sink-input.c  pulse-sink-input.h  pulse-sink-switch.c  pulse-sink-switch.h  pulse-sink.c  pulse-sink.h  pulse-source-control.c  pulse-source-control.h  pulse-source-output.c  pulse-source-output.h  pulse-source-switch.c  pulse-source-switch.h  (+9 more)
examples/: Makefile.am  monitor.c
libmatemixer/: Makefile.am  matemixer-app-info-private.h  matemixer-app-info.c  matemixer-app-info.h  matemixer-backend-module.c  matemixer-backend-module.h  matemixer-backend-private.h  matemixer-backend.c  matemixer-backend.h  matemixer-client-stream.c  matemixer-client-stream.h  matemixer-context.c  matemixer-context.h  matemixer-control.c  matemixer-control.h  matemixer-device-port.c  matemixer-device-port.h  matemixer-device-profile-private.h  matemixer-device-profile.c  matemixer-device-profile.h  matemixer-device-switch.c  matemixer-device-switch.h  matemixer-device.c  matemixer-device.h  matemixer-enum-types.c  matemixer-enum-types.c.template  matemixer-enum-types.h  matemixer-enum-types.h.template  matemixer-enums.h  matemixer-port-private.h  matemixer-port.c  matemixer-port.h  matemixer-private.h  matemixer-profile.c  matemixer-profile.h  matemixer-stored-control.c  matemixer-stored-control.h  matemixer-stream-control-private.h  matemixer-stream-control.c  matemixer-stream-control.h  (+22 more)
(+191 files in other folders)
